# pdf_metadata_extractor

./: ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
pdf_metadata_extractor/: __init__.py  __main__.py  cli.py  extractor.py  llm_client.py  models.py  pdf_parser.py
